--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /.idea/modules.xml
 /.idea/workspace.xml
 /delkultest.iml
+/out/production/delkultest/com/company/Test.class
+/out/production/delkultest/com/company/Задача.txt
